Adjust button margins

--- a/src/capacity.css
+++ b/src/capacity.css
@@ -11,6 +11,14 @@ button {
       margin-right: 5px;
     }
 
+    #gold {
+      margin-left: 0px
+    }
+
+    #sixtyfour {
+      margin-left: 0px
+    }
+
   content {
     padding: 0px 0px
   }
