--- a/src/capacity.css
+++ b/src/capacity.css
@@ -9,6 +9,7 @@ button {
       font-size: 16px;
       margin-left: 5px;
       margin-right: 5px;
+      border-radius: 10px;
     }
 
     #gold {
