Updated Readme and styling

--- a/src/styles/colour.css
+++ b/src/styles/colour.css
@@ -1,15 +1,15 @@
 #space_grey {
-  background-color: black;
+  background-color: #232324;
   /* padding: 12px 12px; */
 }
 
 #gold {
-  background-color: gold;
+  background-color: #f8e7dc;
   /* padding: 12px 12px; */
 }
 
 #silver {
-  background-color: grey;
+  background-color: #e1e2e3;
   /* padding: 12px 12px; */
 }
 
