--- a/src/styles/capacity.css
+++ b/src/styles/capacity.css
@@ -20,8 +20,8 @@ button {
       margin-left: 0px
     }
 
-  content {
-    padding: 0px 0px
+  .content {
+    border: 0px
   }
 
   .no-padding {
@@ -34,4 +34,8 @@ button {
 
   .no-right {
      padding-right: 0px !important
+   }
+
+   .col-12 {
+     height: 100%
    }
